stderr
FizzBuzzerTest.java:12: error: cannot find symbol
    @Before
     ^
  symbol:   class Before
  location: class FizzBuzzerTest
1 error
